--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon index.js"
+    "start": "nodemon index.js",
+    "test": "mocha --timeout 5000 --exit"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/tangsauce/Translator#readme",
   "dependencies": {
     "@slack/client": "^3.14.1",
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mongoose": "^4.12.4",
     "nodemon": "^1.12.1"
