--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "nodemon index.js",
-    "testSlack": "nodemon ./backend/slack.js"
+    "testSlack": "node ./backend/slack.js"
   },
   "repository": {
     "type": "git",
