--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.17.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "cron-parser": "^2.4.3",
     "express": "^4.16.2",
     "mongoose": "^4.12.4",
     "node-schedule": "^1.2.5",
