--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon index.js",
     "test": "mocha --timeout 5000 --exit",
-    "testSlack": "node ./backend/slack.js"
+    "testSlack": "node ./backend/slack.js",
+    "fullStart": "node ./backend/slack.js && nodemon index.js"
   },
   "repository": {
     "type": "git",
