--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "test": "mocha --timeout 5000 --exit",
-    "testSlack": "node ./backend/slack.js",
-    "fullStart": "node ./backend/slack.js && nodemon index.js",
-    "runServer": "nodemon index.js"
+    "slack": "node ./backend/slack.js",
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
