--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "express": "^4.16.2",
     "mongoose": "^4.12.4",
     "node-schedule": "^1.2.5",
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.12.1",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "chai": "^4.1.2",
